[package]
name = "work_tree"
version = "0.1.0"
authors = ["Antoine <antoine.dupuis@etudiant.univ-rennes1.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.59"
nalgebra = "0.31.1"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.59"
features = [
    'Document',
    'Element',
    'ClientQueryOptions',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
